# farmbot

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  README.md  USAGE.md  justfile  schema.sql
.github/workflows/: publish.yaml  rust_build_test.yaml
ADRs/: 2024-10-11_postgres_vs_sqlite.md  2024-10-17_not-using-sql-migrations.md
crates/stowsave/: Cargo.toml
crates/stowsave/src/: command.rs  main.rs
crates/stowsave/tests/: e2e_tests.rs
devops/: justfile
migrations/: 20241017151734_create_installed_commands_table.sql  20241017153413_create_table_managed_computers.sql  20241017154145_add_column_installed_commands.computer_references_managed_computers.name.sql  20241017154933_alter_installed_commands.computer_not_null.sql  20241017155407_alter_installed_commands_primary_key_add_computer_column.sql  20241017160101_add_column_installed_commands.current_version.sql  20241017160339_alter_installed_commands.current_version-not-null.sql  20241017162508_create-table-local_git_repo_clones.sql
user_stories/: syncing_stowed_files.md
