[package]
name = "stowsave"
description = "Automates moving files into a stow directory then using stow to create symlinks back to where the files came from"
homepage = "https://github.com/Jasha10/farmbot/tree/main/crates/stowsave"
repository = "https://github.com/Jasha10/farmbot/"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
thiserror = "1"
pathdiff = "0.2"
path-clean = "1"
clap = { version = "4", features = ["derive"] }
fs_extra = "1"
[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
